disable manual border-radius fixes, use z-index instead

--- a/source/resource/designs/metal/basic.css
+++ b/source/resource/designs/metal/basic.css
@@ -343,6 +343,7 @@ body br
 	overflow: hidden;
 	margin: 0.2em 0.5em;
 	padding: 0;
+    z-index: 10;
 }
 .navbar .group { 
 	margin: 0.2em 0 0.1em 0;
@@ -359,6 +360,7 @@ body br
   	-webkit-border-bottom-right-radius: 1em;
   	
 	border-left: none;
+    z-index: 10;
 }
 .navbar > .widget_container:first-child .group .widget_container:last-child, .navbar > .widget_container:first-child .group div.widget_container:last-child .widget {
 	border-width: 1px 0 0 0;
